# looper

./: .gitignore  BUG_REPORT.md  CLAUDE.md  DEEP_AUDIT.md  EXPERIMENT3_REPORT.md  EXPERIMENT4_REPORT.md  FAILURE_ANALYSIS.md  LEARNINGS.md  OVERNIGHT_REPORT.md  README.md  pyproject.toml  readinglist.md  resume_condition3.py  ruff.toml  run_14b_framework_full.py  run_14b_framework_pilot.py  run_14b_framework_remaining.py  run_32b_base_pilot.py  run_32b_framework.py  run_correct_format_lora.py  run_cot_fewshot_14b.py  run_dpo_training.py  run_edit_tool_14b.py  run_experiment2_partial_replay.py  run_experiment3_mole.py  run_experiment4_ewc_lora.py  run_experiment6_format.py  run_experiment7_budget.py  run_experiment9_ablation.py  run_experiment_framework_expanded.py  run_experiment_framework_fix.py  run_fuzzy_edit_14b.py  run_multirepo_expansion.py  run_oracle_sft.py  run_phase1.py  run_phase1_14b.py  run_phase1_full.py  run_phase1_full_resume.py  run_phase1_openclaw.py  run_phase1_verified.py  (+2 more)
.claude/commands/: codify.md  implement.md  research.md  review.md  spec.md  test.md
.githooks/: pre-commit
docs/: architecture.md  development_process.md  experiments.md  future-work.md  problem.md  research_landscape.md
looper/: __init__.py  models.py  pipeline.py
looper/agent/: mlx_runner.py  ollama_client.py  runner.py  workspace.py
looper/analysis/: paper_sections.py  related_work.py  results_analyzer.py
looper/collectors/: trajectory_store.py
recall/: __init__.py
tests/: test_adapter_serving.py  test_analysis.py  test_evaluator.py  test_models.py  test_ollama_client.py  test_openclaw_parser.py  test_openclaw_provider.py  test_pipeline.py  test_run_openclaw_experiment.py  test_runner.py  test_synthesizer.py  test_task_loader.py  test_trainer.py  test_trajectory_store.py  test_workspace.py
(+22 files in other folders)
