[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall"
version = "0.1.0"
description = "Research on Experience-Consolidated Adaptive LoRA Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
train = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "unsloth",
]
eval = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.6",
]
serve = [
    "vllm>=0.4",
]
all = [
    "recall[dev,train,eval,serve]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
